Закончил шаблон каталога + лёгкие правки

--- a/catalog.html
+++ b/catalog.html
@@ -46,19 +46,19 @@
 
             <div class="menu_bg">
             <div class="menu">
-                <a href="" class="menu_btn mens">
+                <a href="catalog.html" class="menu_btn mens">
                     МУЖЧИНАМ
                 </a>
 
-                <a href="" class="menu_btn womens">
+                <a href="catalog.html" class="menu_btn womens">
                     ЖЕНЩИНАМ
                 </a>
 
-                <a href="" class="menu_btn kids">
+                <a href="catalog.html" class="menu_btn kids">
                     ДЕТЯМ
                 </a>
 
-                <a href="" class="menu_btn sales">
+                <a href="catalog.html" class="menu_btn sales">
                     СКИДКИ
                 </a>
             </div>
@@ -72,26 +72,26 @@
     <main>
         <h1>МУЖСКАЯ ОБУВЬ</h1>
         <div class="cards">
-          <div class="card" id="c1"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c2"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c3"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c4"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c5"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c6"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c7"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c8"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c9"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c10"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c11"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c12"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c13"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c14"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c15"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c16"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c17"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c18"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c19"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>
-          <div class="card" id="c20"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span></div></div>  
+          <div class="card" id="c1"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c2"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c3"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c4"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c5"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c6"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c7"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c8"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c9"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c10"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c11"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c12"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c13"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c14"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c15"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c16"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c17"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c18"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c19"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>
+          <div class="card" id="c20"><div class="inner_card1"><img src="img/NikeAirPegasus39.jpg" loading="lazy" alt=""></div><div class="inner_card2"><h2 class="card_name">name</h2><p class="card_dcp">описанинописаниеописание</p><span class="card_price">price</span><a href="" class="card_buy">КУПИТЬ</a></div></div>  
         </div>
     </main>
     <!-- /ТЕЛО -->
