--- a/ex.html
+++ b/ex.html
@@ -46,19 +46,19 @@
 
             <div class="menu_bg">
             <div class="menu">
-                <a href="" class="menu_btn mens">
+                <a href="catalog.html" class="menu_btn mens">
                     МУЖЧИНАМ
                 </a>
 
-                <a href="" class="menu_btn womens">
+                <a href="catalog.html" class="menu_btn womens">
                     ЖЕНЩИНАМ
                 </a>
 
-                <a href="" class="menu_btn kids">
+                <a href="catalog.html" class="menu_btn kids">
                     ДЕТЯМ
                 </a>
 
-                <a href="" class="menu_btn sales">
+                <a href="catalog.html" class="menu_btn sales">
                     СКИДКИ
                 </a>
             </div>
