--- a/product.html
+++ b/product.html
@@ -74,9 +74,9 @@
         <div class="product">
             <div class="slider">
                 <div class="slider-line">
-                    <img src="img/0rhz8qksc8w6xbqa5k3p781o5c7gfw15.jpg" alt="" class="slider-img">
-                    <img src="img/ey54r4xzqge9koq9jwgrxa3bw9gn6me7.jpg" alt="" class="slider-img">
-                    <img src="img/d30ej6k6zgkbb38e56zekcg4qn4x2qs5.jpg" alt="" class="slider-img">
+                    <img class="slider-img" src="img/0rhz8qksc8w6xbqa5k3p781o5c7gfw15.jpg" alt="" class="slider-img">
+                    <img class="slider-img" src="img/ey54r4xzqge9koq9jwgrxa3bw9gn6me7.jpg" alt="" class="slider-img">
+                    <img class="slider-img" src="img/d30ej6k6zgkbb38e56zekcg4qn4x2qs5.jpg" alt="" class="slider-img">
                 </div>
 
                 <button class="slider-btn-prev">
@@ -91,6 +91,11 @@
                     <div class="slider-dot"></div>
                     <div class="slider-dot"></div>
                 </div>
+
+                <div class="product_info">
+
+                </div>
+            <script src="scripts/slider.js"></script>
             </div>
 
 
