--- a/product.html
+++ b/product.html
@@ -92,14 +92,17 @@
                     <div class="slider-dot"></div>
                 </div>
 
-                <div class="product_info">
-
-                </div>
-            <script src="scripts/slider.js"></script>
+                <script src="scripts/slider.js"></script>
             </div>
 
-
-
+            <div class="product_info">
+                <h1 class="product_name" id="product_name">НАЗВАНИЕ ТОВАРА</h1>
+                <p class="id">АРТИКУЛ: <span class="product_id" id="product_id">777</span> </p>
+                <p class="count">В НАЛИЧИИ: <span class="product_count" id="product_count">100</span>ШТ.</p>
+                <p class="price"><span class="product_price" id="product_price">2500</span>₽</p>
+                <p class="product_description" id="product_description">описание описание</p>
+                <button type="button" id="buy-btn"></button>
+            </div>
         </div>
     </main>
     <!-- /ТЕЛО -->
