--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- БОШКА -->
     <header>
         <div class="top-header">
-            <a class="icon_btn" href="">
+            <a class="icon_btn" href="login.html">
                 <img class="icon_acc" src="img/account.svg" alt="">
                 <span>КАБИНЕТ</span>
             </a>
@@ -56,10 +56,6 @@
 
                 <a href="catalog.html" class="menu_btn kids">
                     ДЕТЯМ
-                </a>
-
-                <a href="catalog.html" class="menu_btn sales">
-                    СКИДКИ
                 </a>
             </div>
             </div>
