--- a/account.html
+++ b/account.html
@@ -66,16 +66,15 @@
 
 
     <!-- ТЕЛО -->
-    <main class="registr">
-        <h1>ВОЙТИ В АККАУНТ</h1>
-        <form action="" method="post">
-            <input type="text" name="nick" id="nick" placeholder="  Никнейм">
-            <input type="email" name="email" id="email" placeholder="   Почта">
-            <input type="password" name="password" id="password" placeholder="  Пароль">
-            <input type="password" name="password_confirm" id="password_confirm" placeholder="  Подтвердите пароль">
-            <button class="button">ЗАРЕГИСТРИРОВАТЬСЯ</button>
-            <p class="pre-login"><a href="login.html">Уже есть аккаунт?</a></p>
-        </form>
+    <main>
+        <div class="account">
+            <h1>ЛИЧНЫЙ КАБИНЕТ</h1>
+            <h2>Добро пожаловать в Ваш личный кабинет, <?= $_SESSION['user']['name'] ?></h2>
+            <h3>Вам доступна скидка в 10%!</h3>
+            <p class="user_info">Имя: <?= $_SESSION['user']['name'] ?> (<?= $_SESSION['user']['id'] ?>)</p>
+            <p class="user_info">Почта: <?= $_SESSION['user']['email'] ?></p>
+            <div><a href="exit.php">ВЫЙТИ ИЗ АККАУНТА</a></div>
+        </div>
     </main>
     <!-- /ТЕЛО -->
 
