--- a/ex.html
+++ b/ex.html
@@ -20,12 +20,12 @@
     <!-- БОШКА -->
     <header>
         <div class="top-header">
-            <a class="icon_btn" href="">
+            <a class="icon_btn" href="login.html">
                 <img class="icon_acc" src="img/account.svg" alt="">
                 <span>КАБИНЕТ</span>
             </a>
 
-            <a class="contact_btn" href="">
+            <a class="contact_btn" href="cont.html">
                 <img class="icon_geo" src="img/geo.svg" alt="">
                 <span>КОНТАКТЫ</span>
                 <img class="icon_phone" src="img/phone.svg" alt="">
@@ -56,10 +56,6 @@
 
                 <a href="catalog.html" class="menu_btn kids">
                     ДЕТЯМ
-                </a>
-
-                <a href="catalog.html" class="menu_btn sales">
-                    СКИДКИ
                 </a>
             </div>
             </div>
