--- a/product.html
+++ b/product.html
@@ -20,12 +20,12 @@
     <!-- БОШКА -->
     <header>
         <div class="top-header">
-            <a class="icon_btn" href="">
+            <a class="icon_btn" href="login.html">
                 <img class="icon_acc" src="img/account.svg" alt="">
                 <span>КАБИНЕТ</span>
             </a>
 
-            <a class="contact_btn" href="">
+            <a class="contact_btn" href="cont.html">
                 <img class="icon_geo" src="img/geo.svg" alt="">
                 <span>КОНТАКТЫ</span>
                 <img class="icon_phone" src="img/phone.svg" alt="">
@@ -56,10 +56,6 @@
 
                 <a href="catalog.html" class="menu_btn kids">
                     ДЕТЯМ
-                </a>
-
-                <a href="catalog.html" class="menu_btn sales">
-                    СКИДКИ
                 </a>
             </div>
             </div>
@@ -101,7 +97,10 @@
                 <p class="count">В НАЛИЧИИ: <span class="product_count" id="product_count">100</span>ШТ.</p>
                 <p class="price"><span class="product_price" id="product_price">2500</span>₽</p>
                 <p class="product_description" id="product_description">описание описание</p>
-                <button type="button" id="buy-btn"></button>
+                <form action="" method="post">
+                    <input type="hidden" name="product_id" value="<?php echo $product['id']; ?>">
+                    <button type="submit" class="add-to-cart">Добавить в корзину</button>
+                </form>
             </div>
         </div>
     </main>
