--- a/female.html
+++ b/female.html
@@ -46,15 +46,15 @@
 
             <div class="menu_bg">
             <div class="menu">
-                <a href="catalog.html" class="menu_btn mens">
+                <a href="male.html" class="menu_btn mens">
                     МУЖЧИНАМ
                 </a>
 
-                <a href="catalog.html" class="menu_btn womens">
+                <a href="female.html" class="menu_btn womens">
                     ЖЕНЩИНАМ
                 </a>
 
-                <a href="catalog.html" class="menu_btn kids">
+                <a href="kid.html" class="menu_btn kids">
                     ДЕТЯМ
                 </a>
             </div>
